@@ -1,6 +1,10 @@
+2010-11-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #16343: htmlArea RTE: JS-Error when closing "Insert Picture" dialogue
+
 2010-11-17  Stanislas Rolland  <typo3@sjbr.ca>
 
-	* Fixed bug #16447: htmlArea RTE: Missing tooltip label for horizontal rule 
+	* Fixed bug #16447: htmlArea RTE: Missing tooltip label for horizontal rule
 
 2010-11-16  Stanislas Rolland  <typo3@sjbr.ca>
 
